[package]
name = "ocibuilder"
version = "0.1.0"
edition = "2021"
authors = ["Navid Yaghoobi"]
license = "MIT"
readme = "README.md"
description = "OCI image builder"
homepage = "https://github.com/navidys/ocibuilder"
repository = "https://github.com/navidys/ocibuilder"

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive"] }
docker_credential = "1.3.1"
env_logger = "0.11.5"
flate2 = { version = "1.0.34", features = ["zlib"] }
fs2 = "0.4.3"
home = "0.5.9"
lazy_static = "1.5.0"
log = "0.4.22"
nix = { version = "0.29.0", features = ["mount", "user"] }
oci-client = "0.13.0"
oci-spec = "0.7.0"
rand = "0.8.5"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tabwriter = "1.4.0"
tar = "0.4.42"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
walkdir = "2.5.0"
