[package]
name = "ocibuilder"
version = "0.1.0"
edition = "2021"
authors = ["Navid Yaghoobi"]
license = "MIT"
readme = "README.md"
description = "OCI image builder"
homepage = "https://github.com/navidys/ocibuilder"
repository = "https://github.com/navidys/ocibuilder"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
fs2 = "0.4.3"
home = "0.5.11"
log = "0.4.26"
thiserror = "2.0.12"
